data/output_files/logs/Ford_Excursion_by_Papa_Chad_3588624649.log


========================= 开始处理 Workshop ID: 3588624649 (Ford_Excursion_by_Papa_Chad) =========================

--- 正在检查已完成的翻译于: data/completed_files/3588624649/en_completed.txt ---
     -> 在 'en_completed.txt' 中找到 43 个键。

--- 正在检查待排除的键于: data/completed_files/3588624649/exclusion_list.txt ---
  -> 排除列表文件 'exclusion_list.txt' 不存在，跳过。

-------------------- 处理子模组: Ford Excursion by Papa_Chad --------------------

--- 正在为 'Ford Excursion by Papa_Chad' 动态查找 'media' 文件夹 ---
  -> 发现版本目录: 42
  -> 正在检查路径的有效性: data/workshop_content/3588624649/mods/Ford Excursion by Papa_Chad/42/media
  --> 路径有效！将使用此路径进行处理: data/workshop_content/3588624649/mods/Ford Excursion by Papa_Chad/42/media

--- 预加载 EN (L1) 数据 ---
预加载完成: 找到 0 个本地 EN 键。

--- 阶段 1: 扫描 Scripts (L0) ---
  -> 处理: Ford_Excursion05.txt
  -> 处理: Ford_Excursion05_Itens.txt
     -> 新增: 23 个 Item
  -> 处理: Ford_Excursion05_Models.txt
  -> 处理: Ford_Excursion05_Recipes.txt
     -> 新增: 8 个 Recipe
阶段 1 完成: 从 scripts 新生成了 31 条数据。

--- 阶段 2: 合并 L0 与 L1 后，纯净英文基准总计: 31 条数据。---

--- 阶段 3: 从 CN 目录加载了 0 条数据。---

--- 阶段 4: 检测到 1 个与官方重复的键。---

--- 已为 Mod ID 3588624649 更新 31 条键来源映射 ---

--- 正在为 Mod 'Ford_Excursion_by_Papa_Chad' 生成输出文件 ---
    - 最终合并 (output.txt): 31 条
    - 纯净英文 (EN_output.txt): 31 条
    - 纯净中文 (CN_output.txt): 0 条
    - 英文待办 (en_todo.txt): 8 条 (增量)
    - 中文独有 (cn_only.txt): 0 条 (增量)
    - 冲突键 (conflict_keys.txt): 1 条
    -> 正在尝试从 Git 历史记录中获取旧版本: data/output_files/Ford_Excursion_by_Papa_Chad_3588624649/EN_todo.txt
      --> 在 Git 历史记录中未找到该文件，视为全新。
    -> 基线日志已存档到: data/logs/archive/Ford_Excursion_by_Papa_Chad_3588624649_baseline_run_20251021_134500.json

处理成功！所有输出文件已保存在 'Ford_Excursion_by_Papa_Chad_3588624649' 文件夹中。
    -> [内存] 已为 Mod 3588624649 记录 Commit SHA: 4e37abe

--- 所有模组处理循环结束，正在保存最终运行状态 ---

--- 应用正则表达式来源覆盖规则 ---
成功加载 6 条正则表达式规则。
  -> 规则 #4 ('^PZKMZ_Recipes$...') 匹配并更新了 1 个键。
成功通过正则表达式规则更新了 1 个键的来源。

--- 正在合并手动分类的键来源 ---
  -> 成功合并/更新了 3 个来自手动分类的键来源。
全局键来源映射已成功保存到: translation_utils/key_source_map.json

增量更新日志已记录到: data/logs/update_log.json

--- 开始生成状态报告 ---
执行报告生成脚本失败: Command '['python', 'scripts/generate_status.py']' returned non-zero exit status 1.
脚本输出:

脚本错误输出:
  File "/home/runner/work/pz-mod-translation-helper/pz-mod-translation-helper/scripts/generate_status.py", line 194
    for mod in mod_todo_list
    ^^^
SyntaxError: f-string expression part cannot include a backslash

